# TCC_Marcus_Pav-o

./: README.md  SQL-GraphQL.sql  docker-compose.yaml
TCC/: Cargo.toml  README.md
TCC/migrations/2024-04-15-234229_create_users/: down.sql  up.sql
TCC/migrations/2024-04-21-195356_create_sensors/: down.sql  up.sql
TCC/migrations/2024-04-21-204615_create_data_sensors/: down.sql  up.sql
TCC/src/: main.rs  models.rs  schema.rs
mosquitto/data/: mosquitto.db
pymodbus/: mock_plc_modbus.py  mock_plc_modbus_serial.py
tcc-live-chart/: package-lock.json  package.json
tcc-live-chart/src/: App.css  App.js  Date_Button.js  config.js  index.js
