workspace = { members = [""] }
[package]
name = "tcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
paho-mqtt = "0.12"
settimeout = "0.1.2"
diesel = { version = "2.1", features = ["postgres", "serde_json"] }
serde_json = "1.0.113"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"

